--- a/src/frontends/android/app/build.gradle
+++ b/src/frontends/android/app/build.gradle
@@ -35,21 +35,21 @@ android {
         jniLibs.srcDir 'src/main/libs'
     }
 
-    /*   task buildNative(type: Exec) {
+       task buildNative(type: Exec) {
            workingDir 'src/main/jni'
            commandLine "${android.ndkDirectory}/ndk-build", '-j', Runtime.runtime.availableProcessors()
        }
        task cleanNative(type: Exec) {
            workingDir 'src/main/jni'
            commandLine "${android.ndkDirectory}/ndk-build", 'clean'
-       }*/
+       }
 
     tasks.withType(JavaCompile) {
-//        compileTask -> compileTask.dependsOn buildNative
+        compileTask -> compileTask.dependsOn buildNative
         options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
     }
 
-    //clean.dependsOn 'cleanNative'
+    clean.dependsOn 'cleanNative'
 
     buildTypes {
         release {
